--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,12 @@ dependencies {
     // DB
     runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 
+    // thymeleaf
+    implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+
+
+
 }
 
 tasks.named('test') {
