--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 server:
   port: 7070
 spring:
-  jwt:
-    secret: adjljweoiruo32493oadjy89uoadlskj873912eljadskljo8qeu92u
+  profiles:
+    active: secret
   thymeleaf:
     cache: false
     prefix: file:src/main/resources/templates/
@@ -18,7 +18,7 @@ spring:
     password:
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     properties:
       hibernate:
         show_sql: true
