카카오맵 주소API 적용 회원가입 완료

--- a/build.gradle
+++ b/build.gradle
@@ -64,7 +64,12 @@ dependencies {
     // emailAuth
     implementation 'com.sun.mail:jakarta.mail:2.0.1'
     implementation 'org.springframework.boot:spring-boot-starter-mail:2.7.1'
+
+    // OAuth
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+
 }
+
 
 tasks.named('test') {
     useJUnitPlatform()
