TDD 회원가입 테스트케이스 추가

--- a/build.gradle
+++ b/build.gradle
@@ -68,6 +68,8 @@ dependencies {
     // OAuth
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 
+    // assertj
+    implementation 'org.assertj:assertj-core:3.11.1'
 }
 
 
