--- a/build.gradle
+++ b/build.gradle
@@ -78,6 +78,8 @@ dependencies {
     // Oauth2
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 
+    // jsoup
+    implementation 'org.jsoup:jsoup:1.16.1'
 
     // gson
     implementation group: 'com.google.code.gson', name: 'gson'
