--- a/build.gradle
+++ b/build.gradle
@@ -83,6 +83,8 @@ dependencies {
 
     // gson
     implementation group: 'com.google.code.gson', name: 'gson'
+
+    implementation 'com.googlecode.json-simple:json-simple:1.1.1'
 }
 
 tasks.named('test') {
