1차배포 전 yml 설정 변경

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 7070
 spring:
   profiles:
-    active: secret
+    active: dev, secret # 에디터에서 작업할 때는 dev로 설정
   thymeleaf:
     cache: false
     prefix: file:src/main/resources/templates/
