1차배포중 main 템플릿 configured Template Resolvers 문제해결중

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -4,7 +4,7 @@ server:
 spring:
   thymeleaf:
     cache: false
-    prefix: file:src/main/resources/templates/
+    prefix: classpath:/templates/
   devtools:
     livereload:
       enabled: true
