1차배포중 이미지파일업로드 resourcePath경로 수정(classpath)

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -37,6 +37,6 @@ springdoc:
     display-request-duration: true
 custom:
   genFileDirPath: /docker_projects/bookuluv/img_upload
-  resourcePath: file:///docker_projects/bookuluv/img_upload/
+  resourcePath: classpath:/img_upload/
   requestPath: /img_upload/**
   originPath: /img_upload/
