1차배포중 이미지파일업로드 resourcePath경로 수정(classpath)

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -36,7 +36,7 @@ springdoc:
     operations-sorter: alpha
     display-request-duration: true
 custom:
-  genFileDirPath: /docker_projects/bookuluv/img_upload
-  resourcePath: classpath:/img_upload/
+  genFileDirPath: /img_upload
+  resourcePath: file:///img_upload/
   requestPath: /img_upload/**
   originPath: /img_upload/
